force-app/main/default/objects/Doctor__c/fields/Availability__c.field-meta.xml
<CustomField>
    <fullName>Availability__c</fullName>
    <label>Availability</label>
    <type>TextArea</type>
</CustomField>