force-app/main/default/objects/Doctor__c/fields/Telemedicine_Profile__c.field-meta.xml
<CustomField>
    <fullName>Telemedicine_Profile__c</fullName>
    <label>Telemedicine Profile</label>
    <length>80</length>
    <type>Text</type>
</CustomField>